add Filters by date